<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/novo_gasto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="80dp"
            android:clickable="true"
            android:drawableTop="@mipmap/ic_launcher"
            android:text="@string/novo_gasto"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/nova_viagem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignTop="@+id/novo_gasto"
            android:layout_marginRight="50dp"
            android:clickable="true"
            android:drawableTop="@mipmap/ic_launcher"
            android:text="@string/nova_viagem"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/minhas_viagens"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/novo_gasto"
            android:layout_below="@+id/novo_gasto"
            android:clickable="true"
            android:drawableTop="@mipmap/ic_launcher"
            android:text="@string/minhas_viagens"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/configuracoes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/nova_viagem"
            android:layout_below="@+id/nova_viagem"
            android:clickable="true"
            android:drawableTop="@mipmap/ic_launcher"
            android:text="@string/configuracoes"
            android:textStyle="bold" />
    </RelativeLayout>
</LinearLayout>